SubBt/force-app/main/default/objects/Resource_Log__c/fields/Break1_In_Time__c.field-meta.xml
<CustomField>
    <fullName>Break1_In_Time__c</fullName>
    <label>Break1 In Time</label>
    <type>DateTime</type>
</CustomField>