SubBt/force-app/main/default/objects/Resource_Log__c/fields/Break1_Out_Time__c.field-meta.xml
<CustomField>
    <fullName>Break1_Out_Time__c</fullName>
    <label>Break1 Out Time</label>
    <type>DateTime</type>
</CustomField>