SubBt/force-app/main/default/objects/Resource_Log__c/fields/Break2_Out_Time__c.field-meta.xml
<CustomField>
    <fullName>Break2_Out_Time__c</fullName>
    <label>Break2 Out Time</label>
    <type>DateTime</type>
</CustomField>