SubBt/force-app/main/default/objects/Resource_Log__c/fields/Break_1__c.field-meta.xml
<CustomField>
    <fullName>Break_1__c</fullName>
    <formula>( Break1_Out_Time__c -  Break1_In_Time__c ) *24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Break 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>