SubBt/force-app/main/default/objects/Resource_Log__c/fields/Break_2__c.field-meta.xml
<CustomField>
    <fullName>Break_2__c</fullName>
    <formula>( Break2_Out_Time__c  -  Break2_In_Time__c) * 24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Break 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>