SubBt/force-app/main/default/objects/Resource_Log__c/fields/Break_Time_Calculated__c.field-meta.xml
<CustomField>
    <fullName>Break_Time_Calculated__c</fullName>
    <formula>Break_1__c +  Break_2__c +  Break_Time_Manual__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Break Time (Calculated)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>