SubBt/force-app/main/default/objects/Resource_Log__c/fields/Break_Time_Manual__c.field-meta.xml
<CustomField>
    <fullName>Break_Time_Manual__c</fullName>
    <label>Total Break Time (Manual)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>