SubBt/force-app/main/default/objects/Resource_Log__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Damaged</fullName>
            </value>
            <value>
                <fullName>Doesn&apos;t Match Blue Prints</fullName>
            </value>
            <value>
                <fullName>Improper Gear</fullName>
            </value>
            <value>
                <fullName>Incomplete Work</fullName>
            </value>
            <value>
                <fullName>Incorrect Material</fullName>
            </value>
            <value>
                <fullName>Onsite Injury</fullName>
            </value>
            <value>
                <fullName>Substandard Material</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>