SubBt/force-app/main/default/objects/Resource_Log__c/fields/Cost_Code__c.field-meta.xml
<CustomField>
    <fullName>Cost_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cost Code</label>
    <referenceTo>Cost_Codes__c</referenceTo>
    <relationshipLabel>Resource Logs</relationshipLabel>
    <relationshipName>Resource_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>