SubBt/force-app/main/default/objects/Resource_Log__c/fields/Daily_Expense__c.field-meta.xml
<CustomField>
    <fullName>Daily_Expense__c</fullName>
    <formula>/*(buildertek__Resource__r.buildertek__Hourly_Rate__c *   buildertek__Hours_Worked_Formula__c) + ( buildertek__Overtime_Hours__c  *  buildertek__Overtime_Hourly_Rate__c )*/

 Overtime_Labor_Espense__c +  Regular_Labor_Expense__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Daily Expense</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>