SubBt/force-app/main/default/objects/Resource_Log__c/fields/Date_Response_Needed__c.field-meta.xml
<CustomField>
    <fullName>Date_Response_Needed__c</fullName>
    <label>Date Response Needed</label>
    <type>Date</type>
</CustomField>