SubBt/force-app/main/default/objects/Resource_Log__c/fields/Hours_Worked_Formula__c.field-meta.xml
<CustomField>
    <fullName>Hours_Worked_Formula__c</fullName>
    <formula>(( End_Time__c -  Start_Time__c) - IF(ISNULL(Lunch_In_Time__c  - Lunch_Out_Time__c),0,(Lunch_In_Time__c  - Lunch_Out_Time__c)) - IF(ISNULL( Break1_In_Time__c   -  Break1_Out_Time__c ),0,( Break1_In_Time__c   -  Break1_Out_Time__c )) - IF(ISNULL( Break2_In_Time__c   -  Break2_Out_Time__c ),0,( Break2_In_Time__c   -  Break2_Out_Time__c ))) * 24 -  Break_Time_Manual__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hours Worked</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>