SubBt/force-app/main/default/objects/Resource_Log__c/fields/Lunch_In_Time__c.field-meta.xml
<CustomField>
    <fullName>Lunch_In_Time__c</fullName>
    <inlineHelpText>Time the resource clocked back in from lunch.</inlineHelpText>
    <label>Lunch In Time</label>
    <type>DateTime</type>
</CustomField>