SubBt/force-app/main/default/objects/Resource_Log__c/fields/Overtime_Hourly_Rate__c.field-meta.xml
<CustomField>
    <fullName>Overtime_Hourly_Rate__c</fullName>
    <formula>(    Resource__r.Hourly_Rate__c    *   Resource__r.Overtime__c   ) +  Resource__r.Hourly_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overtime Hourly Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>