SubBt/force-app/main/default/objects/Resource_Log__c/fields/Overtime_Hours__c.field-meta.xml
<CustomField>
    <fullName>Overtime_Hours__c</fullName>
    <formula>/*IF((buildertek__Resource__r.buildertek__Daily_Over_Time_Threshold__c &lt; 1),0,(buildertek__Hours_Worked_Formula__c - (buildertek__Hours_Worked_Formula__c - buildertek__Resource__r.buildertek__Daily_Over_Time_Threshold__c)))*/

 Hours_Worked_Formula__c -  Regular_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overtime Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>