SubBt/force-app/main/default/objects/Resource_Log__c/fields/Overtime_Labor_Espense__c.field-meta.xml
<CustomField>
    <fullName>Overtime_Labor_Espense__c</fullName>
    <formula>Overtime_Hours__c *  Overtime_Hourly_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overtime Labor Expense</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>