SubBt/force-app/main/default/objects/Resource_Log__c/fields/Regular_Hours__c.field-meta.xml
<CustomField>
    <fullName>Regular_Hours__c</fullName>
    <formula>IF((Resource__r.Daily_Over_Time_Threshold__c &lt; 1),Hours_Worked_Formula__c,(Hours_Worked_Formula__c -(Hours_Worked_Formula__c - Resource__r.Daily_Over_Time_Threshold__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Regular Hours Worked</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>