SubBt/force-app/main/default/objects/Resource_Log__c/fields/Regular_Labor_Expense__c.field-meta.xml
<CustomField>
    <fullName>Regular_Labor_Expense__c</fullName>
    <formula>Regular_Hours__c *  Hourly_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Regular Labor Expense</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>