SubBt/force-app/main/default/objects/Resource_Log__c/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Individual the log is created for.</inlineHelpText>
    <label>Resource</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Resource Logs (Resource)</relationshipLabel>
    <relationshipName>Daily_Items</relationshipName>
    <type>Lookup</type>
</CustomField>