SubBt/force-app/main/default/objects/Resource_Log__c/fields/Schedule_Item__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Task associated to a Schedule.</inlineHelpText>
    <label>Schedule Item</label>
    <referenceTo>Project_Task__c</referenceTo>
    <relationshipLabel>Resource Logs</relationshipLabel>
    <relationshipName>Resource_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>