SubBt/force-app/main/default/objects/Resource_Log__c/fields/Start_Distance__c.field-meta.xml
<CustomField>
    <fullName>Start_Distance__c</fullName>
    <formula>DISTANCE(  GEOLOCATION(  Project__r.Geolocation__Latitude__s  ,  Project__r.Geolocation__Longitude__s ),  GEOLOCATION( Start_Location__Latitude__s ,  Start_Location__Longitude__s )    , &apos;mi&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>In miles</inlineHelpText>
    <label>Start Distance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>